# Axum-URL-Shortener

./: README.md
axum_url_shortener/: Cargo.toml  shortener.db
axum_url_shortener/src/: main.rs
