[package]
name = "axum-url-shortener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
